Fix program bg/fg contrast

--- a/source/stylesheets/sections/_program.sass
+++ b/source/stylesheets/sections/_program.sass
@@ -1,8 +1,8 @@
 // Probably a temporary file
 .wr--program
   @extend %section-wrapper
-  background: image-url('program-bg.jpg') #aeaeae repeat-y center top
-  // min-height: 100vh
+  background: image-url('program-bg.jpg') #141118 repeat-y center top
+  min-height: 100vh
   padding: $section-offset 0
 .wr--lineup, .wr--extras
   // @extend %bg-pattern
@@ -12,6 +12,7 @@
   @extend %section
 
 .se-header--program
+  color: $c-fg-dark
   padding-bottom: $section-offset
 
 .program-txt
